quota REST API specification
