# rest/restapi/operations/quota_responses.go
@@ -1,0 +1,98 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/subutai-io/agent/rest/models"
+)
+
+// QuotaOKCode is the HTTP code returned for type QuotaOK
+const QuotaOKCode int = 200
+
+/*QuotaOK Ok
+
+swagger:response quotaOK
+*/
+type QuotaOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload models.QuotaOKBody `json:"body,omitempty"`
+}
+
+// NewQuotaOK creates QuotaOK with default headers values
+func NewQuotaOK() *QuotaOK {
+	return &QuotaOK{}
+}
+
+// WithPayload adds the payload to the quota o k response
+func (o *QuotaOK) WithPayload(payload models.QuotaOKBody) *QuotaOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the quota o k response
+func (o *QuotaOK) SetPayload(payload models.QuotaOKBody) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *QuotaOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	payload := o.Payload
+	if payload == nil {
+		payload = make(models.QuotaOKBody, 0, 50)
+	}
+
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+
+}
+
+/*QuotaDefault generic error response
+
+swagger:response quotaDefault
+*/
+type QuotaDefault struct {
+	_statusCode int
+}
+
+// NewQuotaDefault creates QuotaDefault with default headers values
+func NewQuotaDefault(code int) *QuotaDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &QuotaDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the quota default response
+func (o *QuotaDefault) WithStatusCode(code int) *QuotaDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the quota default response
+func (o *QuotaDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WriteResponse to the client
+func (o *QuotaDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(o._statusCode)
+}
