# rest/swagger.yml
@@ -524,6 +524,39 @@ After 7 days all statistics is are overwritten by new incoming data."
           description: generic error response
           schema:
       x-swagger-router-controller: Default
+
+  /rest/v1/quota:
+    get:
+      tags: 
+        - agent 
+        - cli 
+        - list
+      operationId: quota
+      description: "Quota function controls container's quotas and thresholds. Available resources:
+cpu, %
+cpuset, available cores
+ram, Mb
+network, Kbps
+rootfs/home/var/opt, Gb
+The threshold value represents a percentage for each resource. Once resource consumption exceeds this threshold it triggers an alert.
+The clone operation, sets no quotas and thresholds for new containers; quotas need to be configured with quota command after a clone operation."
+      parameters:
+        - name: body
+          in: body
+          schema:
+            $ref: "#/definitions/quotaArgs"
+      responses:
+        '200':
+          description: Ok
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/quotaOutput"
+        default:
+          description: generic error response
+          schema:
+      x-swagger-router-controller: Default
+
   /rest/v1/p2p:
     get:
       tags: 
@@ -745,6 +778,38 @@ definitions:
         minLength: 1
       domain:
         type: boolean
+        minLength: 1
+
+  quotaArgs:
+    type: object
+    required:
+      - name
+      - resource
+    properties:
+      name:
+        type: string
+        readOnly: true
+      resource:
+        type: string
+        minLength: 1
+      size:
+        type: string
+        minLength: 1
+      threshold:
+        type: string
+        minLength: 1
+
+  quotaOutput:
+    type: object
+    required:
+      - quota
+      - threshold
+    properties:
+      quota:
+        type: string
+        readOnly: true
+      threshold:
+        type: string
         minLength: 1
 
   fingerprint:
